--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Notre Dame, IN USA"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=c9YyMSEAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=qNoO67AAAAAJ"
   email            : "mju2@nd.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
