--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "mingxuan-ju-80a342151"
+  linkedin         : "clark-mingxuan-ju-80a342151"
   orcid            : 
   pinterest        :
   soundcloud       :
